--- a/_static/dark.css
+++ b/_static/dark.css
@@ -1,20 +1,18 @@
 :root {
     --background: #000;
-    --title: #aaa;
     --menu-background: #121212;
-    --menu-header: #aaa;
+    --menu-chapter: #aaa;
     --menu-entry: #aaa;
-    --menu-entry-hover: #1e1e1e;
-    --menu-entry-active: #151515;
     --header: #aaa;
-    --text: #ccc;
+    --text: #aaa;
     --links: #eee;
-    --todo: #bb86fc;
-    --warning: #cf6679;
-    --tip: #03dac6;
     --code-background: #121212;
     --code-border: none;
-    --code-text: #aaa;
+    --hover: #1e1e1e;
+    --active: #151515;
+    --todo: #121212;
+    --warning: #cf6679;
+    --tip: #03dac6;
 }
 
 @media screen {
@@ -43,32 +41,32 @@
 
     /* top menu (while zoom) */
     .wy-nav-top {background: var(--menu-background) !important}
-    .wy-nav-top a {color: var(--title) !important}
+    .wy-nav-top a {color: var(--menu-chapter) !important}
 
     /* top menu with search input */
     .wy-side-nav-search {background: var(--menu-background) !important; margin-bottom: 2rem}
-    .wy-side-nav-search a {color: var(--title) !important; font-size: 1.3rem; margin-top: 1rem}
-    .wy-side-nav-search a:hover {color: var(--title) !important; background: none !important; text-decoration: none !important;}
+    .wy-side-nav-search a {color: var(--menu-chapter) !important; font-size: 1.3rem; margin-top: 1rem}
+    .wy-side-nav-search a:hover {color: var(--menu-chapter) !important; background: none !important; text-decoration: none !important;}
     .wy-side-nav-search div.version {color: var(--menu-background)}
     .wy-side-nav-search input[type=text] {border: none !important; border-radius: 0}
 
     /* left vertical menu */
     .wy-nav-side {background: var(--menu-background); width: 300px;}
-    .wy-nav-side a {color: var(--menu-header) !important}
+    .wy-nav-side a {color: var(--menu-chapter) !important}
     .wy-nav-side a:before {content: none !important}
 
     /* left vertical menu chapters */
-    .wy-menu-vertical p.caption {color: var(--menu-header) !important; margin: 0 !important;}
-    .wy-menu-vertical p.caption:hover {text-decoration: none !important; color: var(--menu-header); cursor: pointer}
+    .wy-menu-vertical p.caption {color: var(--menu-chapter) !important; margin: 0 !important;}
+    .wy-menu-vertical p.caption:hover {text-decoration: none !important; color: var(--menu-chapter); cursor: pointer}
 
     /* left vertical menu sub-chapters */
     .wy-menu-vertical li {font-size: 1rem !important; background: none !important; border: 0 !important}
     .wy-menu-vertical li:last-child {margin-bottom: 1rem !important}
     .wy-menu-vertical li a {color: var(--menu-entry) !important; border: 0 !important; background: none !important}
-    .wy-menu-vertical li a:hover {text-decoration: none !important; border: 0 !important; background: none !important;  background: var(--menu-entry-hover) !important}
+    .wy-menu-vertical li a:hover {text-decoration: none !important; border: 0 !important; background: none !important;  background: var(--hover) !important}
     .wy-menu-vertical li.current {background: none !important}
-    .wy-menu-vertical li.current a {color: var(--menu-entry) !important; border: 0 !important; background: var(--menu-entry-active) !important}
-    .wy-menu-vertical li.current a:hover {text-decoration: none !important; border: 0 !important; background: var(--menu-entry-hover) !important}
+    .wy-menu-vertical li.current a {color: var(--menu-entry) !important; border: 0 !important; background: var(--active) !important}
+    .wy-menu-vertical li.current a:hover {text-decoration: none !important; border: 0 !important; background: var(--hover) !important}
     .wy-menu-vertical .literal {background: none !important; text-transform: capitalize; font-family: sans-serif; color: var(--menu-entry) !important; font-size: 0.85rem}
 
     /* table:
@@ -78,10 +76,10 @@
      *   - align caption "left" ("center" is unsuitable on vast tables)
      */
     table {border: 0 !important}
-    table td {border: none !important}
-    table th {border-bottom: 1px solid #222 !important}
+    table td {border: 0 !important; color: var(--text)}
+    table th {border: 1px solid var(--code-border) !important; border-bottom: 1px solid var(--text) !important; color: var(--text)}
     table tr td {background: none !important}
-    table tr:hover td {background: #eee !important}
+    table tr:hover td {background: var(--hover) !important; color: var(--text)}
     table thead {text-align: left !important; vertical-align: middle !important}
     table thead p {margin-bottom: 0}
     table thead th.stub {text-align: center; border-right: 0; border-bottom: 1px solid #000; }
@@ -95,7 +93,7 @@
     caption a.headerlink:hover {opacity: 1}
 
     /* inline literal */
-    code.literal {color: var(--code-text) !important; background: var(--code-background) !important; border: 1px solid var(--code-border); padding-left: 0.5rem; padding-right: 0.5rem; font-family: monospace}
+    code.literal {color: var(--text) !important; background: var(--code-background) !important; border: 1px solid var(--code-border); padding-left: 0.5rem; padding-right: 0.5rem; font-family: monospace}
 
     /* glossary entries */
     dt {color: var(--header) !important; background: none !important; border: none !important}
@@ -138,5 +136,8 @@
 
     .highlight {background: var(--code-background); border: var(--code-border)}
     .rst-content div[class^=highlight], .rst-content pre.literal-block {border: var(--code-border)}
-    #search {overflow:hidden;margin:0;padding:0;width:200px;height:40px;background:var(--menu-background);}
+
+    form#search {text-align: center}
+    form#search input#search-submit {overflow: hidden; margin: 0; padding: 0.5em; width: 1px; height: 30px; color: var(--text); background: var(--menu-background); border: 0; display: inline; box-shadow: none;}
+    form#search input#search-input {overflow: hidden; margin: 0; padding: 0.5em; height: 30px; width: 200px; color: var(--text); background: var(--menu-background); border: 0; border-bottom: 1px solid var(--text); display: inline; box-shadow: none}
 }
