Advanced: Function #time 90m

--- a/_static/dark.css
+++ b/_static/dark.css
@@ -17,6 +17,8 @@
 
 @media screen {
     body {color: var(--text); background-color: var(--background) !important;}
+    ::-moz-selection {color: var(--background); background: var(--text);}
+    ::selection {color: var(--background); background: var(--text);}
 
     /* RTD theme's default is 800px as max width for the content */
     .wy-nav-content {max-width: 1100px; background: var(--background)}
