Book: full_name to fullname and last_name to lastname #time 10m

--- a/django/solution/addressbook/addressbook/contact/templates/contact/list.html
+++ b/django/solution/addressbook/addressbook/contact/templates/contact/list.html
@@ -13,8 +13,8 @@
 {% for contact in contacts %}
     <tr>
         <td>{{ forloop.counter }}</td>
-        <td>{{ contact.first_name }}</td>
-        <td><a href="{% url 'contact:details' contact.id %}">{{ contact.last_name }}</a></td>
+        <td>{{ contact.firstname }}</td>
+        <td><a href="{% url 'contact:details' contact.id %}">{{ contact.lastname }}</a></td>
         <td>{{ contact.date_of_birth|date:'Y-m-d' }}</td>
         <td>{{ contact.get_age|default_if_none:'n/a' }}</td>
     </tr>
